# ana

./: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
anchor/: Anchor.toml  Cargo.toml
anchor/programs/ana/: Cargo.toml
anchor/programs/ana/src/: lib.rs  post.tsx
anchor/programs/anahead/: Cargo.toml
anchor/programs/anahead/src/: lib.rs
anchor/src/: anahead-exports.ts  index.ts
anchor/tests/: anahead.spec.ts
src/app/: layout.tsx  page.tsx
src/app/anahead/: page.tsx
src/app/social/: page.tsx
src/components/account/: account-data-access.tsx  account-list-feature.tsx  account-ui.tsx
src/components/anahead/: anahead-data-access.tsx  anahead-feature.tsx  anahead-ui.tsx
src/components/cluster/: cluster-data-access.tsx  cluster-ui.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/social/: page.tsx  post-data-access.tsx  post-feature.tsx
src/components/solana/: solana-provider.tsx
src/components/ui/: ui-layout.tsx
