[package]
name = "anahead"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anahead"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
solana-program = "2.1.8"
anchor-lang = "0.30.1"
anchor-syn = "0.30.1"
ahash = "0.8.11"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

